Post-v2.14.0
---------------------
   - OVSDB:
     * New unixctl command 'ovsdb-server/get-db-storage-status' to show the
       status of the storage that's backing a database.
     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
       If turned on, ovsdb-server will try to reclaim all the unused memory
       after every DB compaction back to OS.  Disabled by default.
   - DPDK:
     * Removed support for vhost-user dequeue zero-copy.
   - The environment variable OVS_UNBOUND_CONF, if set, is now used
     as the DNS resolver's (unbound) configuration file.
   - Linux datapath:
     * Support for kernel versions up to 5.8.x.
   - Terminology:
     * The terms "master" and "slave" have been replaced by "primary" and
       "secondary", respectively, for OpenFlow connection roles.
     * The term "slave" has been replaced by "member", for bonds, LACP, and
       OpenFlow bundle actions.


v2.14.0 - 17 Aug 2020
---------------------
   - ovs-vswitchd no longer deletes datapath flows on exit by default.
   - OpenFlow:
     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
       value of other-config:dp-sn in the Bridge table.
     * Added support to watch CONTROLLER port status in fast failover group.
     * New action "delete_field".
   - DPDK:
     * Deprecated DPDK pdump packet capture support removed.
     * Deprecated DPDK ring ports (dpdkr) are no longer supported.
     * Add hardware offload support for VLAN Push/Pop actions (experimental).
     * Add hardware offload support for matching IPv6 protocol (experimental).
     * Add hardware offload support for set of IPv6 src/dst/ttl
       and tunnel push-output actions (experimental).
     * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
       CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
       CVE-2020-10726, this DPDK version is strongly recommended to be used.